# fp_project

./: LICENSE  README.md  report.md
simp/: CHANGELOG.md  LICENSE  cabal.project  fib.wasm  lab1.md  lab2.md  lab3.md  simp.cabal  stack.yaml
simp-ai/: README.md  compiler.sh  fib.simpai  main.py
simp/app/: Main.hs
simp/data/: sum.simp
simp/haskell-wasm/: wasm.cabal
simp/haskell-wasm/src/Language/Wasm/: Builder.hs
simp/src/Lang/Simp/Backend/: Wasm.hs
simp/src/Lang/Simp/IR/: CFG.hs  DF.hs  MMUpDown.hs  MaximalMunch.hs  PseudoAssembly.hs  SSA.hs  Util.hs
simp/src/Lang/Simp/Interpreter/: PAInt.hs  SimpInt.hs
simp/src/Lang/Simp/Lattice/: CompleteLattice.hs  SignLattice.hs
simp/src/Lang/Simp/Semantics/: LivenessAnalysis.hs  SignAnalysis.hs  TypeInf.hs
simp/src/Lang/Simp/Syntax/: AST.hs  Lexer.hs  Parsec.hs  Parser.hs  SrcLoc.hs
simp/test/: Spec.hs
simp/test/Lang/Simp/IR/: CFGSpec.hs  DFSpec.hs  MMUpDownSpec.hs  MaximalMunchSpec.hs  SSASpec.hs
simp/test/Lang/Simp/Interpreter/: PAIntSpec.hs  SimpIntSpec.hs
simp/test/Lang/Simp/Semantics/: LivenessAnalysisSpec.hs  SignAnalysisSpec.hs  TypeInfSpec.hs
simp/test/Lang/Simp/Syntax/: LexerSpec.hs  ParserSpec.hs
